#2007-01-21 : core    : fixed max/min_fill_values
#           :         : fixed sort (as method and function)
#2007-01-18 : core    : fixed default filling values for unsigned int_.
#2007-01-16 : extras  : new function : `mediff1d`
#2007-01-15 : mrecords: new method: `addfield`
#           : core    : Force the mask of a masked array `x` to be copied w/...
#                     ...masked_array(x,copy=True,mask=nomask,keep_mask=true)
#2007-01-14 : mrecords: Slices are now properly supported
#           : mrecords: `filled` is now properly supported
#2007-01-12 : mrecords: Complete reorganization...
#2007-01-10 : mrecords: Defines a class of records that support masked arrays
#2007-01-08 : Core:
#           : core    : Force a reset of the class defaults after initialization
#           : core    : Modified __array_finallize__ to allow objects w/ _data...
#                     ... _mask fields to be recognized as MA
#2007-01-04 : core    : Fixed a but in masked_all_like
#2007-01-02 : extras  : Force apply_along_axis to output the proper fill_value 
#           : core    : Can use dtypes for the definition of default_fill_value
#2006-12-30 : core    : Cleaned up setitem/setslice w/ hard_mask=True
#			: core    : Fixed masked_unary/binary_operations...
#					  ...to work with subclasses of MaskedArray
#2006-12-22 : core    : Optimized(?) default_/maximum_/minimum_fill_value
#           : core    : Force __new__ to not return a MaskedArray, in order to ...
#           :         ... optimize __array_finalize__
#           : core    : Add the hard_mask flag to __new__ (*[False]*)
#2006-12-19 : core    : Fixed a problem on _set_mask which prevented to set a mask to nomask
#           : extras  : Renamed compress2d to compress_rowcols
#           : extras  : Added dot
#2006-12-18 : extras  : Added compress2d and mask_rowcols
#           : extras  : moved 'average' to 'extras'
#2006-12-13 : core    : Fixed make_mask (forced filling to True)
#	        : core    : Fixed ndim