@@ -1,3 +1,4 @@
+#2007-01-22 : core    : fixed a call to numpy.float128 on 32b machines
 #2007-01-21 : core    : fixed max/min_fill_values
 #           :         : fixed sort (as method and function)
 #2007-01-18 : core    : fixed default filling values for unsigned int_.
